<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>turtle_pong</name>
  <version>0.0.0</version>
  <description>Package for a Pong game using TurtleSim in ROS 2</description>
  
  <maintainer email="davidalvarez33@hotmail.com">axioma</maintainer>

  <license>Apache-2.0</license>

  <!-- Dependencias de herramientas de construcci贸n -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_python</buildtool_depend> 

  <!-- Dependencias de compilaci贸n -->
  <build_depend>rclpy</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>turtlesim</build_depend>

  <!-- Dependencias para la ejecuci贸n -->
  <exec_depend>rclpy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>turtlesim</exec_depend>

  <!-- Dependencias para pruebas -->
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <!-- Exportar el tipo de construcci贸n para ament -->
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
